@@ -37,9 +37,9 @@
     public function errorDocument() {
       $body= '<h1>File not found</h1>';
       $response= $this->newResponse(array('HTTP/1.0 404 OK', 'Content-Length: 23', 'Content-Type: text/html'), $body);
-      $this->assertEquals(404, $response->getStatusCode());
-      $this->assertEquals('23', $response->getHeader('Content-Length'));
-      $this->assertEquals('text/html', $response->getHeader('Content-Type'));
+      $this->assertEquals(404, $response->statusCode());
+      $this->assertEquals(array('23'), $response->header('Content-Length'));
+      $this->assertEquals(array('text/html'), $response->header('Content-Type'));
       $this->assertEquals($body, $response->readData());
     }
   
@@ -50,7 +50,7 @@
     #[@test]
     public function emptyDocument() {
       $response= $this->newResponse(array('HTTP/1.0 204 No content'));
-      $this->assertEquals(204, $response->getStatusCode());
+      $this->assertEquals(204, $response->statusCode());
     }
 
     /**
@@ -61,8 +61,8 @@
     public function chunkedDocument() {
       $body= '<h1>File not found</h1>';
       $response= $this->newResponse(array('HTTP/1.0 404 OK', 'Transfer-Encoding: chunked'), "17\r\n".$body."\r\n0\r\n");
-      $this->assertEquals(404, $response->getStatusCode());
-      $this->assertEquals('chunked', $response->getHeader('Transfer-Encoding'));
+      $this->assertEquals(404, $response->statusCode());
+      $this->assertEquals(array('chunked'), $response->header('Transfer-Encoding'));
       $this->assertEquals($body, $response->readData());
     }
 
@@ -76,8 +76,8 @@
         array('HTTP/1.0 404 OK', 'Transfer-Encoding: chunked'),
         "17\r\n<h1>File not found</h1>\r\n13\r\nDid my best, sorry.\r\n0\r\n"
       );
-      $this->assertEquals(404, $response->getStatusCode());
-      $this->assertEquals('chunked', $response->getHeader('Transfer-Encoding'));
+      $this->assertEquals(404, $response->statusCode());
+      $this->assertEquals(array('chunked'), $response->header('Transfer-Encoding'));
       
       // Read data & test body contents
       $buffer= ''; while ($l= $response->readData()) { $buffer.= $l; }
@@ -91,8 +91,8 @@
     #[@test]
     public function httpContinue() {
       $response= $this->newResponse(array('HTTP/1.0 100 Continue', '', 'HTTP/1.0 200 OK', 'Content-Length: 4'), 'Test');
-      $this->assertEquals(200, $response->getStatusCode());
-      $this->assertEquals('4', $response->getHeader('Content-Length'));
+      $this->assertEquals(200, $response->statusCode());
+      $this->assertEquals(array('4'), $response->header('Content-Length'));
       $this->assertEquals('Test', $response->readData());
     }
     
@@ -103,8 +103,8 @@
     #[@test]
     public function statusCodeWithMessage() {
       $response= $this->newResponse(array('HTTP/1.1 404 Not Found'), 'File Not Found');
-      $this->assertEquals(404, $response->getStatusCode());
-      $this->assertEquals('Not Found', $response->getMessage());
+      $this->assertEquals(404, $response->statusCode());
+      $this->assertEquals('Not Found', $response->message());
       $this->assertEquals('File Not Found', $response->readData());
     }
     
@@ -115,8 +115,8 @@
     #[@test]
     public function statusCodeWithoutMessage() {
       $response= $this->newResponse(array('HTTP/1.1 404'), 'File Not Found');
-      $this->assertEquals(404, $response->getStatusCode());
-      $this->assertEquals('', $response->getMessage());
+      $this->assertEquals(404, $response->statusCode());
+      $this->assertEquals('', $response->message());
       $this->assertEquals('File Not Found', $response->readData());
     }
 
@@ -127,6 +127,207 @@
     #[@test, @expect('lang.FormatException')]
     public function incorrectProtocol() {
       $this->newResponse(array('* OK IMAP server ready H mimap20 68140'));
+    }
+
+    /**
+     * Test getHeader()
+     *
+     * @deprecated  HttpResponse::getHeader() is deprecated
+     */
+    #[@test]
+    public function getHeader() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'X-Binford: 6100', 'Content-Type: text/html'));
+      $this->assertEquals('6100', $response->getHeader('X-Binford'));
+      $this->assertEquals('text/html', $response->getHeader('Content-Type'));
+    }
+
+    /**
+     * Test getHeader()
+     *
+     * @deprecated  HttpResponse::getHeader() is deprecated
+     */
+    #[@test]
+    public function getHeaderIsCaseInsensitive() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'X-Binford: 6100', 'Content-Type: text/html'));
+      $this->assertEquals('6100', $response->getHeader('x-binford'), 'all-lowercase');
+      $this->assertEquals('text/html', $response->getHeader('CONTENT-TYPE'), 'all-uppercase');
+    }
+
+    /**
+     * Test getHeader()
+     *
+     * @deprecated  HttpResponse::getHeader() is deprecated
+     */
+    #[@test]
+    public function nonExistantGetHeader() {
+      $response= $this->newResponse(array('HTTP/1.0 204 No Content'));
+      $this->assertNull($response->getHeader('Via'));
+    }
+
+    /**
+     * Test getHeader()
+     *
+     * @deprecated  HttpResponse::getHeader() is deprecated
+     */
+    #[@test]
+    public function multipleCookiesInGetHeader() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'Set-Cookie: color=green; path=/', 'Set-Cookie: make=example; path=/'));
+      $this->assertEquals(
+        'make=example; path=/',
+        $response->getHeader('Set-Cookie')
+      );
+    }
+
+    /**
+     * Test getHeaders()
+     *
+     * @deprecated  HttpResponse::getHeaders() is deprecated
+     */
+    #[@test]
+    public function getHeaders() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'X-Binford: 6100', 'Content-Type: text/html'));
+      $this->assertEquals(
+        array('X-Binford' => '6100', 'Content-Type' => 'text/html'),
+        $response->getHeaders()
+      );
+    }
+
+    /**
+     * Test getHeaders()
+     *
+     * @deprecated  HttpResponse::getHeaders() is deprecated
+     */
+    #[@test]
+    public function emptyGetHeaders() {
+      $response= $this->newResponse(array('HTTP/1.0 204 No Content'));
+      $this->assertEquals(
+        array(),
+        $response->getHeaders()
+      );
+    }
+
+    /**
+     * Test getHeaders()
+     *
+     * @deprecated  HttpResponse::getHeaders() is deprecated
+     */
+    #[@test]
+    public function multipleCookiesInGetHeaders() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'Set-Cookie: color=green; path=/', 'Set-Cookie: make=example; path=/'));
+      $this->assertEquals(
+        array('Set-Cookie' => 'make=example; path=/'),
+        $response->getHeaders('Set-Cookie')
+      );
+    }
+
+    /**
+     * Test header()
+     *
+     */
+    #[@test]
+    public function header() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'X-Binford: 6100', 'Content-Type: text/html'));
+      $this->assertEquals(array('6100'), $response->header('X-Binford'));
+      $this->assertEquals(array('text/html'), $response->header('Content-Type'));
+    }
+
+    /**
+     * Test header()
+     *
+     */
+    #[@test]
+    public function headerIsCaseInsensitive() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'X-Binford: 6100', 'Content-Type: text/html'));
+      $this->assertEquals(array('6100'), $response->header('x-binford'), 'all-lowercase');
+      $this->assertEquals(array('text/html'), $response->header('CONTENT-TYPE'), 'all-uppercase');
+    }
+
+    /**
+     * Test header()
+     *
+     */
+    #[@test]
+    public function nonExistantHeader() {
+      $response= $this->newResponse(array('HTTP/1.0 204 No Content'));
+      $this->assertNull($response->header('Via'));
+    }
+
+    /**
+     * Test header()
+     *
+     */
+    #[@test]
+    public function multipleCookiesInHeader() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'Set-Cookie: color=green; path=/', 'Set-Cookie: make=example; path=/'));
+      $this->assertEquals(
+        array('color=green; path=/', 'make=example; path=/'),
+        $response->header('Set-Cookie')
+      );
+    }
+
+    /**
+     * Test headers()
+     *
+     */
+    #[@test]
+    public function multipleCookiesInHeaders() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'Set-Cookie: color=green; path=/', 'Set-Cookie: make=example; path=/'));
+      $this->assertEquals(
+        array('Set-Cookie' => array('color=green; path=/', 'make=example; path=/')),
+        $response->headers()
+      );
+    }
+
+    /**
+     * Test headers()
+     *
+     */
+    #[@test]
+    public function headers() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'X-Binford: 6100', 'Content-Type: text/html'));
+      $this->assertEquals(
+        array('X-Binford' => array('6100'), 'Content-Type' => array('text/html')),
+        $response->headers()
+      );
+    }
+
+    /**
+     * Test headers()
+     *
+     */
+    #[@test]
+    public function emptyHeaders() {
+      $response= $this->newResponse(array('HTTP/1.0 204 No Content'));
+      $this->assertEquals(
+        array(),
+        $response->headers()
+      );
+    }
+
+    /**
+     * Test headers() with inconsistent casing in response
+     *
+     */
+    #[@test]
+    public function multipleHeadersWithDifferentCasing() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'X-Example: K', 'x-example: V'));
+      $this->assertEquals(
+        array('X-Example' => array('K', 'V')),
+        $response->headers()
+      );
+    }
+
+    /**
+     * Test header() with inconsistent casing in response
+     *
+     */
+    #[@test]
+    public function multipleHeaderWithDifferentCasing() {
+      $response= $this->newResponse(array('HTTP/1.0 200 OK', 'X-Example: K', 'x-example: V'));
+      $this->assertEquals(
+        array('K', 'V'),
+        $response->header('X-Example')
+      );
     }
   }
 ?>
